After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702153 - Missing and/or broken translations in the openconnect configuration dialog
Missing and/or broken translations in the openconnect configuration dialog
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: VPN (general)
0.9.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-06-13 07:50 UTC by Thomas Richter
Modified: 2013-06-24 16:19 UTC
See Also:
GNOME target: ---
GNOME version: 2.29/2.30


Attachments
broken strings in the translation (28.97 KB, image/png)
2013-06-13 07:50 UTC, Thomas Richter
  Details
properties: call bindtextdomain() and bind_textdomain_codeset() (1.60 KB, patch)
2013-06-13 15:09 UTC, Dan Winship
none Details | Review

Description Thomas Richter 2013-06-13 07:50:39 UTC
Created attachment 246691 [details]
broken strings in the translation

The German translation of the openconnect network manager contains both unprintable characters, and is incomplete as it contains a couple of elements that cannot be rendered. Please see the attached screen shot.
Comment 1 David Woodhouse 2013-06-13 08:17:40 UTC
Hm, there is strangeness here. The translation appears to be correct:

[dwmw2@shinybook po]$ grep 'Ge_heimer Schlüssel' de.po
msgstr "Ge_heimer Schlüssel:"

[dwmw2@shinybook po]$ grep 'Ge_heimer Schlüssel' de.po | hexdump -C
00000000  6d 73 67 73 74 72 20 22  47 65 5f 68 65 69 6d 65  |msgstr "Ge_heime|
00000010  72 20 53 63 68 6c c3 bc  73 73 65 6c 3a 22 0a     |r Schl..ssel:".|
0000001f

you are also missing strings for the "»Cisco Secure Desktop«-_Trojaner erlauben" and "_FSID für Schlüsselkennwort verwenden" checkboxes. 

There's something going here that I don't understand, but I think it isn't just the translations being wrong.
Comment 2 Jiri Klimes 2013-06-13 10:26:25 UTC
Thomas, what is your distro and package version?
Comment 3 Thomas Richter 2013-06-13 10:30:09 UTC
Distro is Debian wheezy, but with gnome from squeeze (I cannot stand gnome 3). Network-manager-openconnect is 0.9.4.0-8 (both the plugin and the UI).
Comment 4 Dan Winship 2013-06-13 12:08:39 UTC
It looks like we never bind_textdomain_codeset() on the vpn plugin translation domains, so if you're running in a non-UTF-8 locale, bad things happen.
Comment 5 Thomas Richter 2013-06-13 12:17:22 UTC
Thanks for spotting this. Yes indeed, this is a non-UTF system. Actually, it is ISO-Latin for legacy reasons.
Comment 6 Dan Winship 2013-06-13 15:09:00 UTC
Created attachment 246732 [details] [review]
properties: call bindtextdomain() and bind_textdomain_codeset()

Make sure gettext knows the translations are in UTF-8, or else they'll
get garbled if the user's domain isn't UTF-8.

=====

This is the patch for openconnect, the other VPN plugin patches are
basically identical (except for slight Makefile differences)
Comment 7 David Woodhouse 2013-06-14 14:19:10 UTC
Thanks. Should I leave you to commit this?
Comment 8 Dan Winship 2013-06-24 16:19:51 UTC
done