properties: call bindtextdomain() and bind_textdomain_codeset()

Make sure gettext knows the translations are in UTF-8, or else they'll
get garbled if the user's domain isn't UTF-8.

https://bugzilla.gnome.org/show_bug.cgi?id=702153